--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,13 +6,13 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: rgb(33, 175, 144);
-  --ifm-color-primary-darker: rgb(31, 165, 136);
-  --ifm-color-primary-darkest: rgb(26, 136, 112);
-  --ifm-color-primary-light: rgb(70, 203, 174);
-  --ifm-color-primary-lighter: rgb(102, 212, 189);
-  --ifm-color-primary-lightest: rgb(146, 224, 208);
+  --ifm-color-primary: #00B9FF;
+  --ifm-color-primary-dark: #029cd4;
+  --ifm-color-primary-darker: #01749e;
+  --ifm-color-primary-darkest: #055a79;
+  --ifm-color-primary-light: #1ebaf3;
+  --ifm-color-primary-lighter: #43c4f3;
+  --ifm-color-primary-lightest: #68caee;
   --ifm-code-font-size: 95%;
 }
 
